--- a/source/posts/2012-12-25.md
+++ b/source/posts/2012-12-25.md
@@ -1,6 +1,6 @@
 # Чтение кода
 
-Многим из вас часто приходится читать чужой (или старый, но свой) код. Умение вчитываться в чужие реализации - важный навык для хорошего разработчика. Не только потому, что это помогает быстрее освоиться в проекте, но и потому, что чтение хорошего кода - один из лучших способов учиться. Вот несколько советов, которые, как мне кажутся, помогут вам читать чужой код с большей пользой.
+Многим из вас часто приходится читать чужой (или старый, но свой) код. Умение вчитываться в чужие реализации - важный навык для хорошего разработчика. Не только потому, что это помогает быстрее освоиться в проекте, но и потому, что чтение хорошего кода - один из лучших способов учиться. Вот несколько советов, которые, как мне кажется, помогут вам читать чужой код с большей пользой.
 
 ![center](http://pochemuha.ru/wp-content/uploads/2011/05/berestyanoe-pismo.jpg)
 
