Кликабельная ссылка для youtu.be

--- a/source/posts/2013-01-05.md
+++ b/source/posts/2013-01-05.md
@@ -22,7 +22,7 @@
 
 Привет. Я пишу ответы на вопросы в ночь с субботы на воскресенье в праздники - так что это действительно мое личное мнение. Ситуация достаточно необычная, вроде все изложено как есть, только там еще был официальный ответ Microsoft на официальный ответ Google:  *«Internet Explorer in Windows Phone 8 and Windows 8 use the same rendering engine.»* - то есть в большой Windows 8 (где все прекрасно работает) используется тот же движок рендеринга, что и в Windows Phone 8, где теперь всё отключили.
 
-Ну и еще - судя по всему проблемы стали возникать и у пользователей других систем - Blackberry и Symbian например. Причем они "ручные" - если поменять настройки браузера и написать Windows Phone с ошибкой - все отлично работает, вот видео сняли - http://youtu.be/Dd7RiMCrZFw
+Ну и еще - судя по всему проблемы стали возникать и у пользователей других систем - Blackberry и Symbian например. Причем они "ручные" - если поменять настройки браузера и написать Windows Phone с ошибкой - все отлично работает, вот видео сняли - [http://youtu.be/Dd7RiMCrZFw](http://youtu.be/Dd7RiMCrZFw)
 
 **Многие сейчас проводят параллели между нынешней политикой Г. и политикой Майкрософт начала 2000ых. И, кажется, Майкрософт уже признала её ошибочной. Зачем Г. ходит по чужим граблям?**
 
