как обычно, запятые.

--- a/source/posts/2013-01-05.md
+++ b/source/posts/2013-01-05.md
@@ -1,14 +1,14 @@
 # С Новым Годом, с новой войной
 
-Самое главное событие начала этого года - продолжение войны между Google и всеми остальными. Герой сегодняшней истории - команда Google Maps. Думаю вы уже в курсе, но повторюсь: Google Maps просто не работает на телефонах с Windows Phone 7 и 8. И ладно бы это было просто недоработкой, но последний ответ корпорации добра по этому поводу был однозначен, так задумано.
+Самое главное событие начала этого года - продолжение войны между Google и всеми остальными. Герой сегодняшней истории - команда Google Maps. Думаю, вы уже в курсе, но повторюсь: Google Maps просто не работает на телефонах с Windows Phone 7 и 8. И ладно бы это было просто недоработкой, но последний ответ корпорации добра по этому поводу был однозначен — так задумано.
 
 ![center](http://img-fotki.yandex.ru/get/6438/9320383.8/0_852ea_d9b753cc_L)
 
-Как это выглядит: при заходе на maps.google.com из IE под WP8 тебя молча редиректит к черту на рога, на главную страницу гугла. Стойте, подождите оправдывать гугл, я сначала по привычке тоже подумал, «ну нормально, наверное просто IE виноват». Давайте по порядку, вот официальный ответ Google:
+Как это выглядит: при заходе на maps.google.com из IE под WP8 тебя молча редиректит к черту на рога, на главную страницу гугла. Стойте, подождите оправдывать гугл, я сначала по привычке тоже подумал, «ну нормально, наверное, просто IE виноват». Давайте по порядку, вот официальный ответ Google:
 
-> Мобильная версия Google Maps оптимизирована для работы в браузерах на базе WebKit, таких как Chrome и Safari. Т.к. Internet Explorer не базируется на WebKit, устройства Windows Phone не могут получать доступ к картам Google для мобильных.
+> Мобильная версия Google Maps оптимизирована для работы в браузерах на базе WebKit, таких, как Chrome и Safari. Т.к. Internet Explorer не базируется на WebKit, устройства Windows Phone не могут получать доступ к картам Google для мобильных.
 
-Понимаете? Ну, представьте себе, если бы свежевышедший Outlook.com работал бы только в IE10? :) Ладно, позиция про неподдержку браузеров смешная, но её хотя бы можно объяснить с технологической точки зрения - действительно поддерживать несколько кодовых баз, это не простая задача. Есть одно «но». Эксперименты показали - чтобы IE10 под WP8 начал работать с гугловскими картами, достаточно… просто поменять User Agent. Более того, еще с утра достаточно было просто зайти из того же IE10 на maps.google.co.uk - там небыло никакого редиректа, всё работало как надо. Та же история с Firefox для мобильных - в нем google maps прекрасно работают, не смотря на то, что это никакой не webkit.
+Понимаете? Ну, представьте себе, если бы свежевышедший Outlook.com работал бы только в IE10? :) Ладно, позиция про неподдержку браузеров смешная, но её хотя бы можно объяснить с технологической точки зрения - действительно поддерживать несколько кодовых баз, это не простая задача. Есть одно «но». Эксперименты показали - чтобы IE10 под WP8 начал работать с гугловскими картами, достаточно… просто поменять User Agent. Более того, еще с утра достаточно было просто зайти из того же IE10 на maps.google.co.uk - там не было никакого редиректа, всё работало как надо. Та же история с Firefox для мобильных - в нем google maps прекрасно работают, несмотря на то, что это никакой не webkit.
 
 Сначала я думал, что это очередное «техническое решение» какого-нибудь особенного технаря из Г. Банальные и простые исследования привели меня к мысли, что это не ошибка, а последовательное, политическое действие. Такое же, как история с прижиманием всех «альтернативных» игроков на поле андроида. Такое же, как отключение выбора поисковой системы для пользователей с русской локалью.
 
@@ -16,21 +16,21 @@
 
 ## Интервью
 
-Вообще я не специалист в диалоговых жанрах, я и с собой-то с трудом говорю. Но я попытался позадавать вопросов [Мише Черномордикову](http://twitter.com/mixen), чтобы понять, как это выглядит со стороны других экспертов. Подчеркну, что мне интересно мнение Миши не как сотрудника Microsoft, а как «человека с этой части рынка», знакомого с историей WP8 изнутри.
+Вообще, я не специалист в диалоговых жанрах, я и с собой-то с трудом говорю. Но я попытался позадавать вопросов [Мише Черномордикову](http://twitter.com/mixen), чтобы понять, как это выглядит со стороны других экспертов. Подчеркну, что мне интересно мнение Миши не как сотрудника Microsoft, а как «человека с этой части рынка», знакомого с историей WP8 изнутри.
 
 **Миша, скажи, правильно ли я описал саму ситуацию, ничего не напутал?**
 
 Привет. Я пишу ответы на вопросы в ночь с субботы на воскресенье в праздники - так что это действительно мое личное мнение. Ситуация достаточно необычная, вроде все изложено как есть, только там еще был официальный ответ Microsoft на официальный ответ Google:  *«Internet Explorer in Windows Phone 8 and Windows 8 use the same rendering engine.»* - то есть в большой Windows 8 (где все прекрасно работает) используется тот же движок рендеринга, что и в Windows Phone 8, где теперь всё отключили.
 
-Ну и еще - судя по всему проблемы стали возникать и у пользователей других систем - Blackberry и Symbian например. Причем они "ручные" - если поменять настройки браузера и написать Windows Phone с ошибкой - все отлично работает, вот видео сняли - [http://youtu.be/Dd7RiMCrZFw](http://youtu.be/Dd7RiMCrZFw)
+Ну и еще - судя по всему, проблемы стали возникать и у пользователей других систем - Blackberry и Symbian, например. Причем они "ручные" - если поменять настройки браузера и написать Windows Phone с ошибкой - все отлично работает, вот видео сняли - [http://youtu.be/Dd7RiMCrZFw](http://youtu.be/Dd7RiMCrZFw)
 
 **Многие сейчас проводят параллели между нынешней политикой Г. и политикой Майкрософт начала 2000ых. И, кажется, Майкрософт уже признала её ошибочной. Зачем Г. ходит по чужим граблям?**
 
-Мне действительно сложно понять, зачем Google все это замыслил. Ведь они при этом мало что выигрывают, зато многое теряют. По сути они не сказали, что Microsoft плохой. В этом случае они бы могли найти своих сторонников. Они сказали плохо о пользователях, пошли вразрез со своей обычной стратегией - в общем, странная и некрасивая история. Для любой компании.
+Мне действительно сложно понять, зачем Google все это замыслил. Ведь они при этом мало что выигрывают, зато многое теряют. По сути, они не сказали, что Microsoft плохой. В этом случае они бы могли найти своих сторонников. Они сказали плохо о пользователях, пошли вразрез со своей обычной стратегией - в общем, странная и некрасивая история. Для любой компании.
 
-С одной стороны, они сказали, что пользователи Windows Phone им не нужны.  И это сильно ударило по их репутации. Причем не только для пользователей Windows Phone (а среди них немало пользователей сервисов Google - YouTube, поиск, Gmail итд), но и просто сторонних наблюдателей. Достаточно почитать комментарии на таких любимых для экосистемы Google сайтах как Хабрахабр, The Next Web или Mashable. Репутационный ущерб компании получен непонятно зачем.
+С одной стороны, они сказали, что пользователи Windows Phone им не нужны.  И это сильно ударило по их репутации. Причем не только для пользователей Windows Phone (а среди них немало пользователей сервисов Google - YouTube, поиск, Gmail и т.д.), но и просто сторонних наблюдателей. Достаточно почитать комментарии на таких любимых для экосистемы Google сайтах, как Хабрахабр, TheNextWeb или Mashable. Репутационный ущерб компании получен непонятно зачем.
 
-С другой стороны, Google зачем-то публично отказался от своего имиджа "открытости". Кажется, это первый случай, когда они говорят не о поддержке открытых стандартов, а о поддержке одного движка. Притом что другие движки (Trident, Gecko, Presto) поддерживают веб-стандарты. Вот это точно привет из 90х.
+С другой стороны, Google зачем-то публично отказался от своего имиджа "открытости". Кажется, это первый случай, когда они говорят не о поддержке открытых стандартов, а о поддержке одного движка. Притом, что другие движки (Trident, Gecko, Presto) поддерживают веб-стандарты. Вот это точно привет из 90х.
 
 Ну и наконец, Google противоречит сам себе - у них же на сайте можно найти [рекомендации для веб-разработчиков, что так делать нельзя](https://developers.google.com/webmasters/smartphone-sites/detecting-user-agents). Ни фильтровать по user-agent браузера, ни ограничивать пользователя в выборе мобильной/полной версии - полная версия тоже не работает.
 
@@ -39,9 +39,9 @@
 Да, конечно, активно пользовался ими в США пару лет назад.
 Сейчас у Bing Maps партнерство с Nokia. Теперь у них много общих данных, и пользоваться ими можно в России, Украине, многих других странах. Могу сказать, что я ездил по Nokia Drive в полном офлайне по штату Джорджия, центральной Европе с немецкими деревеньками. Там даже был поиск по местам и ограничения скорости в деревнях. Так что продуктом я очень доволен.
 
-Рынок карт достаточно конкурентный - естественно есть и другие решения. Тем более странно выглядит ход Google - их картами мало кто пользовался в браузере. Для этого есть приложения - например, российский gMaps.
+Рынок карт достаточно конкурентный - естественно, есть и другие решения. Тем более странно выглядит ход Google - их картами мало кто пользовался в браузере. Для этого есть приложения - например, российский gMaps.
 
-Естественно на Windows Phone есть также карты от Яндекса и другие решения.
+Естественно, на Windows Phone есть также карты от Яндекса и другие решения.
 
 **Как ты думаешь, какой по-человечески правильный ответ на такое поведение Г? Т.е. как бы ответил ты лично сам?**
 
