--- a/source/posts/2013-01-30.md
+++ b/source/posts/2013-01-30.md
@@ -4,7 +4,7 @@
 
 Большая часть браузеров уже очень давно могут выполнять функцию текстового редактора. Попробуйте вставить в строку ввода URL строку: `data:text/html;base64,PGh0bWwgY29udGVudGVkaXRhYmxlPg==`. Теперь переключите фокус в основное поле браузера и пишите. Правда же это редактор? Я вам больше скажу. Чтобы сохранить написанное - нажмите то же, что и обычно - ctrl+s или cmd+s, в зависимости от вашей ОС. Файл сохранится в формате .html и будет читаться везде.
 
-Удивительно, почему в браузер еще не встроили "большой" редактор. Вот например, используя вот этот гист, я могу заменить  не маленькую часть своего любимого SublimeText
+Удивительно, почему в браузер еще не встроили «большой» редактор. Вот например, используя вот этот гист, я могу заменить  немаленькую часть своего любимого SublimeText:
 
 <script src="https://gist.github.com/4670615.js"></script>
 
