--- a/source/posts/2013-03-11.md
+++ b/source/posts/2013-03-11.md
@@ -6,7 +6,7 @@
 
 Допустим, жил-был некоторый человек. Ну, скажем, Полуэкт ибн Полуэкт. Каждый день на протяжении трёх лет он покупал себе пирожное в булочной на углу. Сначала пирожные были не очень вкусные, зато их можно было купить по пути домой. Возможно, это был единственный плюс пирожных, но на начальном этапе этого было достаточно. Постепенно, день за днем, пирожные становились лучше и лучше. Закупали качественные продукты, новое оборудование, в конце концов, кондитеры тоже учатся на собственном опыте. Полуэкт настолько полюбил пирожные, что стал покупать их не по одному, а по три, пять, десять штук, чтобы угостить друзей и знакомых. Он заражал всех вокруг восхищением любимым продуктом питания и был полон оптимизма: «Сегодняшние пирожные на 12% вкуснее вчерашних! Какой прогресс!». Многие полуэктовы друзья доверчиво пробовали эти пирожные и тоже начинали фанатеть.
 
-Шли годы, Полуэкт толстел. Пирожные на углу, как и прежде, были хороши, но стали слегка приедаться. В один прекрасный день Полуэкт внезапно ловит себя на мысли, что больше не хочет пирожное. «Сколько можно» - думает он, - «Каждый день есть одно и то же пирожное! Что в нём такого, чтобы есть его каждый день?». Тем не менее, Полуэкь идёт и через «не хочу» покупает пирожное. Приходит домой, упрямо надкусывает его… И, конечно, разочаровывается: «Так я и думал, ужасно, у них наверняка умер кондитер!». Угадать следующую неизбежную стадию достаточно просто. Наш Полуэкт идёт в мясной магазин, покупает стейк и на обратном пути размышляет: «Что за придурки покупают пирожные, от них один вред». Проходя мимо булочной он даже думает встать тут одиночным пикетом с плакатом «Пирожные сакс, стейки зе эни ван!». Но время поджимает, пора жарить мясо, к тому же, Полуэкту уже нет дела до тех, кто застрял в гастрономическом развитии и продолжает наивно жевать пирожные. 
+Шли годы, Полуэкт толстел. Пирожные на углу, как и прежде, были хороши, но стали слегка приедаться. В один прекрасный день Полуэкт внезапно ловит себя на мысли, что больше не хочет пирожное. «Сколько можно» - думает он, - «Каждый день есть одно и то же пирожное! Что в нём такого, чтобы есть его каждый день?». Тем не менее, Полуэкт идёт и через «не хочу» покупает пирожное. Приходит домой, упрямо надкусывает его… И, конечно, разочаровывается: «Так я и думал, ужасно, у них наверняка умер кондитер!». Угадать следующую неизбежную стадию достаточно просто. Наш Полуэкт идёт в мясной магазин, покупает стейк и на обратном пути размышляет: «Что за придурки покупают пирожные, от них один вред». Проходя мимо булочной он даже думает встать тут одиночным пикетом с плакатом «Пирожные сакс, стейки зе эни ван!». Но время поджимает, пора жарить мясо, к тому же, Полуэкту уже нет дела до тех, кто застрял в гастрономическом развитии и продолжает наивно жевать пирожные. 
 
 Что же на самом деле происходит, когда человек так резко меняет свою привязанность? У меня есть три гипотезы и одно убеждение.
 
