--- a/source/posts/2013-03-13.md
+++ b/source/posts/2013-03-13.md
@@ -7,8 +7,8 @@
 
 -----
 
-* Kiln Harmon [умеет работать с каждым репозиторием](https://kippt.com/bobuk/inbox) как с Git, так и с  Hg. Т. е. ребята из фогкрик опять анонсировали то, что было в гитхабе с незапамятных времен, уже года полтора :)
-* Угнать за 60 секунд: [как закрытие Megaupload подействовало на продажи фильмов](http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2229349). Отличный пример аналитики, которая мне прямо нравится. Ну, и аргументация же хорошоая. Осторожно, PDF на 30 страниц!
+* Kiln Harmon [умеет работать с каждым репозиторием](https://kippt.com/bobuk/inbox) как с Git, так и с  Hg. Т. е. ребята из фогкрик опять анонсировали то, что было в гитхабе с незапамятных времён, уже года полтора :)
+* Угнать за 60 секунд: [как закрытие Megaupload подействовало на продажи фильмов](http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2229349). Отличный пример аналитики, которая мне прямо нравится. Ну, и аргументация же хорошая. Осторожно, PDF на 30 страниц!
 * О! [Хранилище маркдаун документов с реалтаймовым редактированием](http://www.document.ly/). По сути - удобный реалтайм вики. Есть почти всё, что я хотел получить от hackpad.
 * [Очередная попытка](http://pythonsweetness.tumblr.com/post/45227295342/fast-pypy-compatible-ordered-map-in-89-lines-of-python) написать компактное решение для двухсвязанного списка с логарифмическим временем инсёрта. Используется тупо как dict с сохранением порядка. Прелесть, разумеется, в том, что оно работает даже с PyPy.
 * Ребята из Iron.io [написали о том, как заменили 30 серверов с Ruby](http://blog.iron.io/2013/03/how-we-went-from-30-servers-to-2-go.html) на 2 сервера с Go. А еще можно было на 4 с питоном заменить, потому что задача у них довольно простая. Удивительно прожорливая штука эти ваши Рельсы.
