--- a/source/posts/2013-03-14.md
+++ b/source/posts/2013-03-14.md
@@ -8,9 +8,9 @@
 
 <img src="http://cho.justos.org:9119/counter.gif" height=1 width=1/>
 
-Однако пользователей у Ридера было очень много. Ведь за последние 3 года выросло огромное количество, десятки (если не сотни) приложений, базирующихся на его API. Никому не хочется парсить десятки RSS файлов, да еще и отличающихся по формату. Никому не хочется держать сервер с данными, готорые пользователь может и не посмотрит. Десятки красивых, умных, отлаженных (и иногда платных) программ, зависящих от инфраструктуры, которая закрывается в июне.
+Однако пользователей у Ридера было очень много. Ведь за последние 3 года выросло огромное количество, десятки (если не сотни) приложений, базирующихся на его API. Никому не хочется парсить десятки RSS файлов, да ещё и отличающихся по формату. Никому не хочется держать сервер с данными, которые пользователь может и не посмотрит. Десятки красивых, умных, отлаженных (и, иногда, платных) программ, зависящих от инфраструктуры, которая закрывается в июне.
 
-Что происходит с рынком API в америке? Вчера Netflix закрыл публичные API, сегодня гугл закрывает 3 больших API (CalDAV, Search for Shopping API и Reader). Что, астрологи объявили год закрытия API?
+Что происходит с рынком API в Америке? Вчера Netflix закрыл публичные API, сегодня гугл закрывает 3 больших API (CalDAV, Search for Shopping API и Reader). Что, астрологи объявили год закрытия API?
 
 P.S. А еще Г. закрыли Snapseed для десктопа, которым пользовались многие.
 
@@ -20,16 +20,16 @@ P.S. А еще Г. закрыли Snapseed для десктопа, которы
 
 * [Вышла](https://hacks.mozilla.org/2013/03/firefox-os-simulator-previewing-version-3-0/) новая версия симулятора Firefox OS для десктопов. Поставьте, оно даст вам общее впечатление о FF OS и о том, как она будет выглядеть на телефонах.
 * [git-fat - хорошая, хоть и простоватая](https://github.com/jedbrown/git-fat) замена git-annex. Нужна если вы хотите версионировать большие файлы в рамках гита. Приятно, что git-fat зависит только от rsync и python.
-* [Исходники на BANCStar](https://github.com/jloughry/BANCStar). Вот так выглядели банковские приложения в те стародавние времена, когда небыло нормальных языков программирования. а ведь всего-то 20 лет прошло. Теперь вы видите прогресс?
+* [Исходники на BANCStar](https://github.com/jloughry/BANCStar). Вот так выглядели банковские приложения в те стародавние времена, когда не было нормальных языков программирования. А ведь всего-то 20 лет прошло. Теперь вы видите прогресс?
 * [Гугл убил Ридер, чтобы лучше рос Гугл+!](http://thenextweb.com/google/2013/03/14/former-google-reader-product-manager-confirms-our-suspicions-its-demise-is-all-about-google/) ШОК! ВИДЕО! На самом деле видео нет, но идея именно такая. Бывший менеджер гуглридера делится откровениями, а другие их пытаются развенчать. Шоу "Окна" в худших своих проявлениях.
 * На лайфхакере [обсуждают способы для подписывания документов](http://lifehacker.com/5990172/whats-the-best-way-to-to-sign-documents-electronically-without-scanning-them) в электронном виде. Я всегда думал что электронные документы надо писывать электронной подписью. Ан нет!
 * [Эппл должна рвануть в iOS7](http://readwrite.com/2013/03/12/why-apple-ios-7-needs-to-kill-it), пишет нам очередной гик из RWW, который считает что качество продукта - это скорость его развития. И грустно то, что я с ним согласен :(
 * [Продолжение рассказа о том, как делать ретина-дружелюбные сайты](http://paulstamatiou.com/responsive-retina-blog-development-part-2). Вообще, пока люди массово не пересядут на ретина-экраны, никто этим заниматься не будет. Только массы пользователи драйвят разработчиков сайтов, к сожалению.
 * [14 боянотрендов вебдизайна](http://econsultancy.com/uk/blog/62335-14-lousy-web-design-trends-that-are-making-a-comeback). Да. Последнее время какая-то неприятная деградация происходит. Люди устали от читаемых текстов, быстрых сайтов, минимума картинок. Теперь им хочется счастья.
-* Очередной [отчет о том, как хакнуть фейсбук](http://www.nirgoldshlager.com/2013/03/how-i-hacked-any-facebook-accountagain.html). Я всё жду, пока в области безопасности случится очередной прорыв. Ну, я не знаю, боевые человекоподобные роботы, убивающие каждого хакера, чтоли.
+* Очередной [отчёт о том, как хакнуть фейсбук](http://www.nirgoldshlager.com/2013/03/how-i-hacked-any-facebook-accountagain.html). Я всё жду, пока в области безопасности случится очередной прорыв. Ну, я не знаю, боевые человекоподобные роботы, убивающие каждого хакера, что ли.
 * Очень правильная [статья "не учитесь кодить, учитесь делать штуки"](http://www.jakelevine.me/blog/2013/03/dont-learn-how-to-code-learn-how-to-make-things/). Да, сейчас никому не важно, умеете вы программировать или нет. Важно уметь делать работающие вещи. Вот, как этот бложек. Хорошо что вы в код не заглядываете...
-* [Ларри Пейдж объявил об уходе Энди Рубина](http://googleblog.blogspot.ru/2013/03/update-from-ceo.html), первоначального создателя Android. Всё пропало, всё! На самом деле Рубин был последним из руководства Android, кто всё еще настаивал на открытости. Посмотрим как Сандар Пичай будет двигать разработку.к
+* [Ларри Пейдж объявил об уходе Энди Рубина](http://googleblog.blogspot.ru/2013/03/update-from-ceo.html), первоначального создателя Android. Всё пропало, всё! На самом деле Рубин был последним из руководства Android, кто всё еще настаивал на открытости. Посмотрим как Сандар Пичай будет двигать разработку.
 * **BREAKING** [Distribute и Setuptools объединяются!](http://mail.python.org/pipermail/distutils-sig/2013-March/020126.html). Два частично совместимых фреймворка для пакетирования питона внезапно объявляют об объединении и я по настоящему счастлив. Первая хорошая новость сегодня.
 * [Сайдпроджект о ваших сайдпрожектах](http://sideshowhq.com/). Свеженький сайт  и лист рассылки о новых маленьких сайтиках в интернете.
-* Сегодня все будут писать про "легкую миграцию" с google reader. Готовьтесь. Вот и [Feedly](http://blog.feedly.com/2013/03/14/google-reader/) подтянулся.
-* И еще один язык, фреймворк, окружение для разработки веба. В этот раз интересное - [smalltalk-like система Amber](http://amber-lang.net/). Очень рекомендую посмотреть и разобраться, там действительно почти чистый смолтолк для веба. Красиво.
+* Сегодня все будут писать про "лёгкую миграцию" с google reader. Готовьтесь. Вот и [Feedly](http://blog.feedly.com/2013/03/14/google-reader/) подтянулся.
+* И ещё один язык, фреймворк, окружение для разработки веба. В этот раз интересное - [smalltalk-like система Amber](http://amber-lang.net/). Очень рекомендую посмотреть и разобраться, там действительно почти чистый смолтолк для веба. Красиво.
