--- a/source/posts/2013-03-11.md
+++ b/source/posts/2013-03-11.md
@@ -22,7 +22,7 @@
 
 А теперь я расскажу, что думаю на самом деле. У меня есть такая максима, которая объясняет многое, происходящее с нами в жизни: «**Путь с вершины Фудзи ведёт только вниз**». В данном случае название горы не имеет отношения к самой мысли, но я разжую смысл для тех, кто не любит думать.
 
-Вот как для меня выглядит развитие хорошего продукта. Сначала продукт привлекателен, но не очень вкуснен. Мы пробуем его, но без всякого аппетита. Со временем качество этого продукта, будь то пирожные, гаджеты или (особенно) софт, неуклонно растет. Мы искренне восхищаемся темпами роста. Через какое-то время мы привыкаем к этому темпу, мы уже не видим его. Мы так долго идем вверх, что уже привыкли к подъему, поверили, что вот так, как сейчас - норма, поверхность, параллельная горизонту. И мы продолжаем движение вперёд и вперёд. Однако, у каждой горы есть вершина. В какой-то момент мы достигаем точки, после которой невозможен рост качества, к которому мы привыкли. Вот тут-то мы и замечаем: «дорога пошла вниз». Мы начинаем кричать «пирожное уже не торт, я пойду покорять другую гору». И переходим к другому продукту. Да, он не так хорош, как наши привычные пирожные. Но мы прощаем ему почти всё только за то, что он развивается и улучшается привычными нам темпами.
+Вот как для меня выглядит развитие хорошего продукта. Сначала продукт привлекателен, но не очень вкусен. Мы пробуем его, но без всякого аппетита. Со временем качество этого продукта, будь то пирожные, гаджеты или (особенно) софт, неуклонно растет. Мы искренне восхищаемся темпами роста. Через какое-то время мы привыкаем к этому темпу, мы уже не видим его. Мы так долго идем вверх, что уже привыкли к подъему, поверили, что вот так, как сейчас - норма, поверхность, параллельная горизонту. И мы продолжаем движение вперёд и вперёд. Однако, у каждой горы есть вершина. В какой-то момент мы достигаем точки, после которой невозможен рост качества, к которому мы привыкли. Вот тут-то мы и замечаем: «дорога пошла вниз». Мы начинаем кричать «пирожное уже не торт, я пойду покорять другую гору». И переходим к другому продукту. Да, он не так хорош, как наши привычные пирожные. Но мы прощаем ему почти всё только за то, что он развивается и улучшается привычными нам темпами.
 
 Да простят меня гуманитарии, но наша любовь к продукту измеряется производной от качества, которое нам нравится. Гики любят инновационность, поэтому, чем больше нового в софте или платформе, - тем интереснее. Девочки любят, когда попадают «в их стиль», поэтому держатся за любимый бренд до тех пор, пока он всё больше отражает их индивидуальность. Не забывайте это, когда в следующий раз почувствуете «уже не торт»-эффект. Потому что, возможно, не теми стали вы сами. Смею надеяться, вы не будете держать обиду за этот грустный каламбур.
 
