--- a/pages/2013-03-21.md
+++ b/pages/2013-03-21.md
@@ -2,11 +2,11 @@
 
 Небольшая заметка о том, как и почему произошли изменения на этом сайте.
 
-Когда-то давным-давно, когда деревья были большими, а телефоны — маленькими, когда жизнь была прекрасной и удивительной, словом, года три назад я внезапно понял, что в моём интернете мир разделился на две части. Ну, то есть, как разделился. Не распался, конечно. Но появилась отчетливая ватерлиния, ниже которой было темно. Знаете, как на ботинке, вступившем в грязную лужу.
+Когда-то давным-давно, когда деревья были большими, а телефоны — маленькими, когда жизнь была прекрасной и удивительной, словом, года три назад я внезапно понял, что в моём интернете мир разделился на две части. Ну, то есть как разделился. Не распался, конечно. Но появилась отчётливая ватерлиния, ниже которой было темно. Знаете, как на ботинке, вступившем в грязную лужу.
 
 ![center](http://img-fotki.yandex.ru/get/6439/9320383.8/0_88f00_e4910e1_L.jpeg)
 
-Представьте себе блог. Нет, блог сложно, пусть будет, скажем, страница с фотографией на фотохостинге. В центре страницы - сама фотография. Слева и справа — разная информация об авторе. Сверху - информация о сервисе и навигация. Но самое интересное — снизу. Да, вы уже угадали. Там комментарии. Источник радости и счастья, если автор угодил своей аудитории, или поток ароматных и нервных высказываний, если автор был честен. Ну, конечно, я сейчас передергиваю. Однако, в моей голове уже прочно поселились два интернета. Верхний — в котором живут и творят и нижний - в котором тратят время.
+Представьте себе блог. Нет, блог сложно, пусть будет, скажем, страница с фотографией на фотохостинге. В центре страницы - сама фотография. Слева и справа — разная информация об авторе. Сверху - информация о сервисе и навигация. Но самое интересное — снизу. Да, вы уже угадали. Там комментарии. Источник радости и счастья, если автор угодил своей аудитории, или поток ароматных и нервных высказываний, если автор был честен. Ну, конечно, я сейчас передёргиваю. Однако, в моей голове уже прочно поселились два интернета. Верхний — в котором живут и творят, и нижний - в котором тратят время.
 
 К чему я всё это рассказываю? Как вы, наверное, заметили, я средизайнил свой бложек. В нем больше нет места для нижнего интернета, который [так любят гики](/post/2012-08-21-geekery/). Я не хочу тратить на него время. И, более того, я не хочу чтобы ~~вы тратили на него время~~. Да, я знаю, что для многих из вас "в каментах самый жир". Худейте. А я пока накидаю ночных ссылок. Потому что самое вкусное - завтра.
 
@@ -17,8 +17,8 @@
 * Vagrant [отказался от использования rubygems](http://mitchellh.com/abandoning-rubygems). Ну ладно, не буду пугать. Просто у них теперь есть инсталлер, который гораздо удобнее для тех, кто не использует ruby.
 * [Очень жирная история](http://www.dailydot.com/society/pycon-dongle-joke-misogyny-sexism-adria-richards/) о большом скандале с дракой на PyCon. Имхо - и шутка была дурацкая, и бабы дуры. Простите за сексизм.
 * Прости, гугл, [you can Keep it to yourself](http://gigaom.com/2013/03/20/sorry-google-you-can-keep-it-to-yourself/). Толстая игра слов гигаом, за которой кроется банальное - после закрытия ридера и гуглноутбука Ом Малик не готов доверить гуглу свои данные.
-* [Егор](https://twitter.com/lvivski) написал интересный [фреймворк Start](https://github.com/lvivski/start). Пишет что это Sinatra-style фреймворк для Dart. Ну, честно сказать, легкостью синатры тут и не пахнет, но это же только начало!
-* Лучший вебный групчат (на самом деле это IRC) HipChat [объявил о бесплатности](http://blog.hipchat.com/2013/03/21/hipchat-now-free-for-teams-of-5-users-or-fewer/), правда для команд меньше 5 человек. Настоятельно рекомендую, особенно если к нему бота подключить.
-* Ребята из Mozilla [тонко троллят гуглоидов](http://identity.mozilla.com/post/45842909320/users-dont-like-social-login), намекая что кнопка "Залогиньтесь с G+" совершенно бесполезна. Вот и я так думаю. И даже нет, я первый так писал!
+* [Егор](https://twitter.com/lvivski) написал интересный [фреймворк Start](https://github.com/lvivski/start). Пишет, что это Sinatra-style фреймворк для Dart. Ну, честно сказать, лёгкостью синатры тут и не пахнет, но это же только начало!
+* Лучший вебный групчат (на самом деле это IRC) HipChat [объявил о бесплатности](http://blog.hipchat.com/2013/03/21/hipchat-now-free-for-teams-of-5-users-or-fewer/), правда, для команд меньше 5 человек. Настоятельно рекомендую, особенно если к нему бота подключить.
+* Ребята из Mozilla [тонко троллят гуглоидов](http://identity.mozilla.com/post/45842909320/users-dont-like-social-login), намекая, что кнопка "Залогиньтесь с G+" совершенно бесполезна. Вот и я так думаю. И даже нет, я первый так писал!
 * [Хорошая статья](http://davidcel.is/blog/2013/03/20/the-story-of-my-redis-database/) с очевидной мыслью - данные надо размещать аккуратно. Особенно если вы отказались от реляционности в них.
-* [Вышел первый релиз](http://ashkenas.com/backbonejs-1.0/) Backbone.js 1.0. Мне этот позвоночник всё еще кажется каким-то натянутым, но многим нравится. Танцуем?
+* [Вышел первый релиз](http://ashkenas.com/backbonejs-1.0/) Backbone.js 1.0. Мне этот позвоночник всё ещё кажется каким-то натянутым, но многим нравится. Танцуем?
