--- a/pages/2013-04-04.md
+++ b/pages/2013-04-04.md
@@ -8,6 +8,8 @@
 
 К чему я это всё пишу? К тому что этому мирному сосуществованию пришел конец. Сначала вчера [Mozilla и Samsung](https://blog.mozilla.org/blog/2013/04/03/mozilla-and-samsung-collaborate-on-next-generation-web-browser-engine/) объявили, что разратабывают новый движок браузера для мобильных. Да-да, они делают новый движок, а не переделывают Gecko. Но это был всего-лишь приквел, [Сараевское убийство](http://ru.wikipedia.org/wiki/%D0%A1%D0%B0%D1%80%D0%B0%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B5_%D1%83%D0%B1%D0%B8%D0%B9%D1%81%D1%82%D0%B2%D0%BE), если вы понимаете о чем я. Сегодня утром [Google объявил, что создали форк проекта WebKit](http://blog.chromium.org/2013/04/blink-rendering-engine-for-chromium.html) и дальше будут развиваться независимо. И вот это уже война.
 
+![center](http://img-fotki.yandex.ru/get/6435/9320383.8/0_897ad_95a716ee_L.jpg)
+
 Давайте вчитаемся в строки (и между) анонса "проекта Blink".
 
 1. Это полный форк текущего состояния WebKit, с ~~уже сделанными~~ массивными изменениями.
