--- a/pages/2013-04-26.md
+++ b/pages/2013-04-26.md
@@ -1,5 +1,4 @@
-Марко? Армент!
-==============
+# Марко? Армент!
 
 Не буду тянуть быка за неподобающие места. То, чего мы все боялись, произошло. Марко [продал](http://www.marco.org/2013/04/25/instapaper-next-generation) свой проект Instapaper компании Betaworks, главным продуктом которой является bitly. Безусловно, это наилучший покупатель, но меня вот тут спрашивают, почему я грущу. Всё просто, посмотрите на это вместе со мной.
 
