заметка про китечку.

--- a/pages/2014-01-08.md
+++ b/pages/2014-01-08.md
@@ -17,3 +17,4 @@
 * Как-то наткнулся на [публикацию Стивена Вольфрама о Ричарде Фейнмане](http://www.stephenwolfram.com/publications/short-talk-about-richard-feynman/). Как большой фанат обоих прочитал весь текст два раза. Эта публикация, конечно, очень дополняет портрет Вольфрама в моих глазах.
 
 Вообще, не стесняйтесь слать ссылки. Лучше всего в почту. В мою.
+P.S. И почините китечку, кто умеет? Там надо переписать весь кусок с авторизацией, а мне ну так лень :(
