--- a/pages/2014-01-09.md
+++ b/pages/2014-01-09.md
@@ -4,6 +4,8 @@
 
 ![center](http://www.rusdemotivator.ru/uploads/posts/2012-01/1327872237_436275_ostalos-3-sms.jpg)
 
+## Ссылки
+
 * Пожалуй, главная гиковская новость дня: [LightTable стал opensource](http://www.chris-granger.com/2014/01/07/light-table-is-open-source/). Если вы вдруг по какой-то причине еще не пробовали этот полу-IDE / полу-редактор — сделайте это прямо сейчас. Да, разобраться в нем поначалу не просто, но оно того стоит.
 * [Apple и Samsung снова встретятся](http://www.engadget.com/2014/01/08/apple-and-samsung-ceos-to-meet-before-february-19th/) для переговоров. Думаю, это очередная попытка решить, сколько денег Самсунг должен Эпплу. Хотя нет, не хочу об этом думать, есть новости и поинтереснее.
 * Twitter торжественно [отчитался о внедрении SPDY](https://blog.twitter.com/2013/cocoaspdy-spdy-for-ios-os-x) а так же показал свой фреймворк для работы с SPDY для ObjectiveC. Должен сказать, что SPDY сам по себе прироста скорости не дает никак. Т.е. я много раз пытался, но так и не смог придумать когда он реально поможет. Даже на мобильных, [как оказалось](http://conferences.sigcomm.org/co-next/2013/program/p303.pdf) большого прироста нет. Осторожно, в последней ссылке PDF.
