Typo 2014-01-10.md интеренет -> интернет
интеренет -> интернет

--- a/pages/2014-01-10.md
+++ b/pages/2014-01-10.md
@@ -32,7 +32,7 @@
 
 ## Ссылки
 
-* Overstock.com, один из больших интренте-магазинов всего [начал принимать биткоины для оплаты](http://www.wired.com/business/2014/01/overstock-bitcoin-live/). Слушайте, это прямо счастье. Я даже зарегистрировался и решил сразу что-то заказать. Но оказалось, что пока это работает только из США :( Буду ждать. И да, это, скорее всего, приведёт опять к росту курса. Кстати, вы же знаете [лучший способ узнать курс биткоина?](http://yandex.ru/yandsearch?text=курс+биткоина)
+* Overstock.com, один из больших интернет-магазинов всего [начал принимать биткоины для оплаты](http://www.wired.com/business/2014/01/overstock-bitcoin-live/). Слушайте, это прямо счастье. Я даже зарегистрировался и решил сразу что-то заказать. Но оказалось, что пока это работает только из США :( Буду ждать. И да, это, скорее всего, приведёт опять к росту курса. Кстати, вы же знаете [лучший способ узнать курс биткоина?](http://yandex.ru/yandsearch?text=курс+биткоина)
 * Марко [написал очередной пост "гугл - зло"](http://www.marco.org/2014/01/09/more-google-sleaze). На самом деле нет. Весь сыр бор вокруг фичи "легко послать письмо любому, кто зарегистрирован в гуглкрест". Я согласен с тем, что фича ужасная. И согласен с тем, что загонять всех насильно в соцсеточку - перебор. Но пока всё не так масштабно.
 * Github [запускает свой deployment api](http://developer.github.com/changes/2014-01-09-preview-the-new-deployments-api/). И вот что интересно, никто пока не кричит "гитхаб убивает стартапы!!!11", при том что огромное количество проектов сейчас делается именно про continuous deployment, вот например [dploy.io из свежих](http://dploy.io/). Любят гики гитхаб, ох любят. И я в том числе.
 * [Зарелизился](https://mail.mozilla.org/pipermail/rust-dev/2014-January/007753.html) Rust 0.9. Чем дальше я на него смотрю, тем больше он мне как язык нравится. Ребята из Мозиллы пытаются сделать действительно современного идейного наследника C.
