--- a/pages/2014-01-15.md
+++ b/pages/2014-01-15.md
@@ -2,6 +2,9 @@
 
 Ну, сегодня какой-то скучный день, точнее утро. Поэтому сразу к ссылкам.
 
+![center](http://s19.postimg.org/5sfsbmdxf/image.jpg)
+
+
 * [DropBox и Uber: стоят миллионы, но все еще в шаге от провала](http://www.wired.com/business/2014/01/dropbox-uber/). Такая, довольно спорная статья с интересным мнением. Ну действительно удивительно, как компании, которые оцениваю в миллиарды, могут позволить себе двухдневные простои из-за софтверных ошибок. Очень много денег поставлено на карту. Но статья и правда спорная, все же wired.
 * Ребята из TreeHouse [рассуждают об psd-to-html](http://blog.teamtreehouse.com/psd-to-html-is-dead). Действительно, еще 3-4 года назад это было очень популярно: просто нарисуй в фотошопе сайт и "сконвертируй" (конечно обычно эта конвертация производилась живыми людьми) в готовый HTML-сайт. Но в современном мире просто фотошопом никак не обойдешься - нужна демонстрация анимации, описание поведения сайта в сложных ситуация, адаптация под разные разрешения экрана. Именно по этой причине я совсем не понимаю "чистых дизайнеров", которые не в состоянии сделать прототип сайта, а могут его только нарисовать. Ребята, вы мамонты! Если не адаптируетесь - вымрете! Тем более, что научиться верстать прототипы - дело 3-4 месяцев в сложном случае.
 * [Как применить диплернинг для распознавания голоса китов](http://danielnouri.org/notes/2014/01/10/using-deep-learning-to-listen-for-whales/). Да, чем только люди не занимаются.
